# confidex

./: .env.docker.example  .gitignore  .gitleaks.toml  AGENTS.md  Anchor.toml  CLAUDE.md  CONFIDEX_ONE_PAGER.md  Cargo.toml  DEMO_SCRIPT.md  EATING_GLASS.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS.md  README.md  TODO.md  check-positions.cjs  confidex-architecture.md  docker-compose.yml  package.json  pnpm-workspace.yaml  render.yaml
.github/workflows/: build.yml  deploy.yml  test.yml
.husky/: commit-msg  pre-commit
arcium-mxe/: .gitignore  Anchor.toml  Arcium.toml  OFFCHAIN_CIRCUITS.md  package.json
arcium-mxe/encrypted-ixs/: Cargo.toml
arcium-mxe/encrypted-ixs/src/: lib.rs
arcium-mxe/migrations/: deploy.ts
arcium-mxe/scripts/: init-comp-defs.ts
backend/: .dockerignore  .env.production.example  COVERAGE_PLAN.md  Dockerfile  README.md  ecosystem.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
backend/data/: crank.db-shm  crank.db-wal
backend/keys/: .gitignore
backend/migrations/: 001_analytics_timescale.sql
backend/monitoring/: .env.example  .gitignore  README.md  docker-compose.yml
backend/scripts/: check-mxe.ts  generate-shadowwire-key.ts  test-shadowwire-api.ts
data/: blacklist.json
docs/: DEPLOYMENT.md  spec.md
frontend/: .dockerignore  .env.example  .gitignore  BRAND_GUIDELINES.md  Dockerfile  init-mxe.ts  init-vaults.ts  next.config.js  package.json  phosphor-icons.md  place-sell-order.ts  playwright.config.ts  pnpm-lock.yaml  simulate-callback.ts  tailwind.config.ts  test-e2e-order.ts  test-match.ts  test-mpc-integration.ts  test-place-buy-order.ts  vercel.json  vitest.config.ts
lib/: package.json  pnpm-lock.yaml  tsup.config.ts
nginx/: nginx.conf
programs/arcium_mxe/: Cargo.toml
programs/arcium_mxe/src/: lib.rs
programs/arcium_mxe/src/instructions/: calculate_fill.rs  callback.rs  compare_prices.rs  initialize.rs  mod.rs
programs/arcium_mxe/src/state/: mod.rs
programs/confidex_dex/: Cargo.toml
programs/confidex_dex/src/: error.rs  lib.rs
programs/confidex_dex/src/cpi/: arcium.rs  mod.rs  verifier.rs
programs/confidex_dex/src/instructions/: admin.rs  cancel_order.rs  cancel_order_callback.rs  check_liquidation_batch.rs  create_pair.rs  expire_settlement.rs  fail_settlement.rs  finalize_settlement.rs  initialize.rs  initiate_settlement.rs  match_orders.rs  mod.rs  mpc_callback.rs  perp_add_margin.rs  perp_auto_deleverage.rs  perp_close_position.rs  perp_init_liquidation.rs  perp_init_market.rs  perp_liquidate.rs  perp_open_position.rs  perp_remove_margin.rs  perp_settle_funding.rs  perp_update_funding.rs  place_order.rs  record_shadowwire_transfer.rs  register_shadowwire.rs  settle_order.rs  settle_order_callback.rs  unwrap_tokens.rs  verify_eligibility.rs  wrap_tokens.rs
programs/confidex_dex/src/oracle/: mod.rs
programs/confidex_dex/src/settlement/: mod.rs  shadowwire.rs  types.rs
programs/confidex_dex/src/state/: exchange.rs  funding.rs  liquidation.rs  mod.rs  order.rs  pair.rs  pending_match.rs  perp_market.rs  position.rs  settlement_request.rs  trader_eligibility.rs  user_balance.rs  user_shadowwire.rs
project-docs/: API.md  ARCHITECTURE.md  ARCIUM_MPC_INTEGRATION.md  ENHANCED_ZK_CIRCUITS_PLAN.md  FUTURE_IMPLEMENTATIONS.md  HACKATHON_SHOWCASE.md  HELIUS_GET_TRANSACTIONS_FOR_ADDRESS.md  MPC_PRODUCTION_PLAN.md  PRD-001-Master-Overview.md  PRD-002-Smart-Contract-Architecture.md  PRD-003-Cryptographic-Infrastructure.md  PRD-004-Frontend-UX.md  PRD-005-Integration-Specifications.md  PRIZE-STRATEGY.md  RESEARCH-SUMMARY.md  TODO_TRACKER.md  ZK_VERIFICATION_IMPLEMENTATION.md  confidex-dev-setup.md  dev-setup.md  pnp-sdk-guide-hackathon.md  privacy_hack_research.md
prover-service/: .env.example  Dockerfile  package.json  pnpm-lock.yaml
remotion/: PRD.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: backup-db.sh  build-circuit.sh  demo.sh  deploy-mxe.sh  deploy-verifier.sh  init-letsencrypt.sh
tests/: check_market_size.ts  debug-open-position.ts  decode_perp_market.ts  decode_v2.ts  fix-perp-market.ts  init-exchange.ts  init-perp-market.ts  migrate-perp-market.ts  package.json  pnpm-lock.yaml  reinit-perp-market.ts  set-blacklist-root.ts  test-verify.ts  tsconfig.json
(+459 files in other folders)
