[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Patch blake3 to use older version that doesn't require Rust 2024 edition
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.0" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
