[package]
name = "arcium_mxe"
version = "0.1.0"
description = "Arcium MXE program for Confidex encrypted order matching"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcium_mxe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
