[package]
name = "confidex-dex"
version = "0.1.0"
description = "Confidential DEX with three-layer privacy architecture"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidex_dex"

[features]
default = ["devnet"]
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
pyth-sdk-solana = "0.10"

[dev-dependencies]
