[package]
name = "confidex-dex"
version = "0.1.0"
description = "Confidential DEX with three-layer privacy architecture"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidex_dex"

[features]
default = ["devnet", "zk-verification"]
devnet = []
mainnet = ["zk-verification"]  # Mainnet always requires ZK verification
debug = []  # Enable verbose logging (DO NOT use in production - leaks sensitive data)

# ZK verification features (PRODUCTION CRITICAL)
# Default: zk-verification enabled
# Skip: skip-zk-verification (development ONLY - never use in production)
zk-verification = []  # Production default - real Sunspot verification
skip-zk-verification = []  # Development only - bypasses ZK verification

# Anchor features
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }
pyth-sdk-solana = "0.10"
solana-sha256-hasher = "2.2"

# NOTE: Both DEX and MXE now use Anchor 0.32.1 for Arcium compatibility.
# We still use raw invoke() CPI with manually constructed instruction data
# to avoid circular dependencies and keep deployment separate.
# The MXE instruction discriminators and account layouts are documented in arcium.rs.

[dev-dependencies]
